--- a/frontend_borrWow/src/styles/ItemListPage.module.css
+++ b/frontend_borrWow/src/styles/ItemListPage.module.css
@@ -40,22 +40,43 @@
   flex-wrap: wrap;
   gap: 20px; 
   justify-content: center; 
+  padding: 0 20px;
 }
 
 /* Responsive styles */
 @media (max-width: 768px) {
+  .page {
+    padding: 20px;
+  }
+  
   .categoryLinks {
-    flex-direction: column;
-    align-items: center; 
-    width: 100%;
-    display: flex;;
-
+    gap: 5px;
+    padding: 0 10px;
   }
 
-  .container {
-    padding: 0 10px; 
+  .categoryLinks button {
+    padding: 5px 15px;
+    font-size: 0.5em;
   }
 }
+
+@media (max-width: 480px) {
+  .categoryLinks {
+    gap: 8px;
+    padding: 0 15px;
+  }
+
+  .categoryLinks button {
+    padding: 8px 15px;
+    font-size: 0.9em;
+  }
+}
+
+  .container {
+    padding: 0 15px; 
+    gap: 15px;;
+  }
+
 
 @media (max-width: 480px) {
   .categoryLinks button {
